--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
         border-bottom: 1px solid rgba(201, 166, 107, 0.1);
         z-index: 1000;
         padding: 16px 0;
+        opacity: 0;
         transition: all 0.4s ease;
       }
 
@@ -253,6 +254,7 @@
         padding: 12px 0;
         background: rgba(255, 255, 255, 0.95);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.08);
+        opacity: 1;
       }
 
       .header .container {
@@ -272,7 +274,7 @@
       }
 
       .logo img {
-        height: 55px;
+        height: 75px;
         width: auto;
       }
 
@@ -323,7 +325,7 @@
           display: none;
         }
         .logo img {
-          height: 45px;
+          height: 60px;
         }
       }
 
@@ -2205,7 +2207,7 @@
         }
 
         .logo img {
-          height: 40px;
+          height: 50px;
         }
 
         .hotline-icon {
@@ -2774,9 +2776,9 @@
           <img src="assets/images/giuongbocda/logo.PNG" alt="Hana Bedding">
         </a>
         <div class="header-right">
-          <a href="tel:0123456789" class="hotline">
+          <a href="tel:0764265775" class="hotline">
             <span class="hotline-icon">📞</span>
-            <span>0123.456.789</span>
+            <span>076.426.5775</span>
           </a>
           <a href="#order" class="btn btn-primary">Đặt hàng</a>
         </div>
@@ -2869,7 +2871,7 @@
 
             <!-- CTA Button -->
             <div class="cta-section">
-              <a href="#orderPanel" class="btn btn-primary btn-cta">🛒 Đặt Hàng Ngay - Freeship</a>
+              <a href="#orderPanel" class="btn btn-primary btn-cta">🛒 Đặt Hàng Ngay</a>
             </div>
           </div>
         </div>
@@ -2962,7 +2964,7 @@
 
             <div class="form-group">
               <label>Số điện thoại <span class="required">*</span></label>
-              <input type="tel" id="phone" name="phone" placeholder="0901234567" required>
+              <input type="tel" id="phone" name="phone" placeholder="0764265775" required>
             </div>
 
             <div class="form-group full">
@@ -3004,7 +3006,7 @@
             <h3>Đặt hàng thành công!</h3>
             <p>Hanabedding sẽ liên hệ xác nhận trong <strong>30 phút</strong> (giờ hành chính).</p>
             <div class="success-actions">
-              <a href="https://zalo.me/0123456789" target="_blank" class="btn btn-primary zalo-btn">💬 Nhắn Zalo</a>
+              <a href="https://zalo.me/0764265775" target="_blank" class="btn btn-primary zalo-btn">💬 Nhắn Zalo</a>
               <button type="button" class="btn btn-outline" id="newOrderBtn">Đặt đơn mới</button>
             </div>
           </div>
@@ -3030,9 +3032,9 @@
             <h4>Lắp Đặt Tận Nơi</h4>
             <p>Thợ chuyên nghiệp lắp đặt miễn phí</p>
           </div>
-          <div class="benefit-card">
+          <div class="benefit-card"> 
             <div class="benefit-icon">🛡️</div>
-            <h4>Bảo Hành 5 Năm</h4>
+            <h4>Bảo Hành 24 Tháng</h4>
             <p>Cam kết bảo hành chính hãng</p>
           </div>
           <div class="benefit-card">
@@ -3150,8 +3152,8 @@
           </div>
           <div class="footer-section">
             <h5>Liên hệ</h5>
-            <a href="tel:0123456789">📞 Hotline: 0123.456.789</a>
-            <a href="https://zalo.me/0123456789" target="_blank">💬 Zalo: 0123.456.789</a>
+            <a href="tel:0764265775">📞 Hotline: 076.426.5775</a>
+            <a href="https://zalo.me/0764265775" target="_blank">💬 Zalo: 076.426.5775</a>
             <p>🕐 8:00 - 21:00 hàng ngày</p>
           </div>
           <div class="footer-section">
