--- a/index.html
+++ b/index.html
@@ -2896,7 +2896,7 @@
 
             <!-- Description -->
             <div class="product-description">
-              Chất liệu da cao cấp, khung sườn chắc chắn chịu lực, thiết kế thông minh tiết kiệm diện tích. Phù hợp mọi không gian nhà ở sang trọng. Bảo hành 5 năm, đổi trả miễn phí trong 30 ngày.
+              Chất liệu da cao cấp, khung sườn chắc chắn chịu lực, thiết kế thông minh tiết kiệm diện tích. Phù hợp mọi không gian nhà ở sang trọng. <strong>Miễn Phí Ship và Giao Lắp</strong> khách hàng tại Thành phố Hồ Chí Minh và một số khu vực tỉnh lân cận trong phạm vi 50km.
             </div>
 
             <!-- Price -->
@@ -3256,9 +3256,8 @@
           </div>
           <div class="footer-section">
             <h5>Chính sách</h5>
-            <a href="#">Chính sách đổi trả</a>
-            <a href="#">Chính sách bảo hành</a>
-            <a href="#">Chính sách vận chuyển</a>
+            <a href="/chinh-sach-giao-lap.html">Chính sách vận chuyển và lắp đặt</a>
+            <a href="/chinh-sach-bao-hanh.html">Chính sách bảo hành</a>
           </div>
         </div>
         <div class="footer-bottom">
