--- a/chinh-sach-bao-hanh.html
+++ b/chinh-sach-bao-hanh.html
@@ -423,51 +423,50 @@
 
         <!-- Section 2 -->
         <div class="policy-section">
-          <h2>2) Thời Gian Bảo Hành</h2>
+          <h2>2) Thời Hạn Bảo Hành</h2>
           <div class="highlight-box">
-            <p><span class="warranty-badge">Bảo hành 5 năm</span> cho <strong>khung giường</strong> về các lỗi kỹ thuật: gãy, nứt, cong vênh do lỗi sản xuất.</p>
+            <p><span class="warranty-badge">Bảo hành 24 tháng</span> cho <strong>khung sườn/kết cấu giường</strong>.</p>
           </div>
           <div class="highlight-box">
-            <p><span class="warranty-badge">Bảo hành 24 tháng</span> cho <strong>phần bọc da</strong>: bong tróc, rách do lỗi sản xuất (không bao gồm hao mòn tự nhiên).</p>
+            <p><span class="warranty-badge">Bảo hành 12 tháng</span> cho <strong>phần bọc da/bọc nệm</strong> (da, simili, vải), đường may, nút rút.</p>
           </div>
         </div>
 
         <!-- Section 3 -->
         <div class="policy-section">
-          <h2>3) Điều Kiện Bảo Hành</h2>
+          <h2>3) Điều Kiện Để Được Bảo Hành</h2>
+          <h3>Khách hàng cần cung cấp:</h3>
           <ul>
-            <li>Sản phẩm còn trong thời hạn bảo hành.</li>
-            <li>Có hóa đơn mua hàng hoặc phiếu bảo hành hợp lệ.</li>
-            <li>Lỗi phát sinh do nhà sản xuất, không phải do người dùng.</li>
-            <li>Sản phẩm được sử dụng đúng mục đích và còn nguyên kết cấu.</li>
+            <li>Số điện thoại mua hàng / hóa đơn / phiếu bảo hành (bản giấy hoặc điện tử).</li>
+            <li>Ảnh/video thể hiện lỗi.</li>
+            <li>Sản phẩm còn trong thời hạn bảo hành và còn nguyên kết cấu.</li>
           </ul>
         </div>
 
         <!-- Section 4 -->
         <div class="policy-section">
           <h2>4) Trường Hợp Được Bảo Hành</h2>
+          <p>Bảo hành <strong>miễn phí</strong> khi lỗi phát sinh do:</p>
           <ul>
-            <li>Khung giường bị gãy, nứt, cong vênh do lỗi kỹ thuật sản xuất.</li>
-            <li>Phần bọc da bị bong tróc, rách do lỗi chất liệu hoặc kỹ thuật may.</li>
-            <li>Các chi tiết phụ kiện (ốc vít, chân giường) bị hỏng do lỗi sản xuất.</li>
-            <li>Sản phẩm không đúng với mô tả ban đầu về kích thước, màu sắc (phát hiện trong 7 ngày đầu).</li>
+            <li>Lỗi kỹ thuật gia công/sản xuất: <strong>lệch khung/kết cấu lỗi</strong>, cong vênh bất thường do kết cấu, sai quy cách lắp ráp từ nhà sản xuất.</li>
+            <li>Lỗi lắp đặt do kỹ thuật của công ty.</li>
+            <li>Lỗi phụ kiện do nhà cung cấp/nhà sản xuất.</li>
           </ul>
           <div class="highlight-box">
-            <p><strong>Lưu ý:</strong> Nếu lỗi không thể sửa chữa được, Hanabedding sẽ <strong>đổi sản phẩm mới tương đương</strong> hoặc <strong>hoàn tiền 100%</strong> theo yêu cầu của khách hàng (trong trường hợp bảo hành và chiếu ngược lại).</p>
+            <p>Khi bảo hành do lỗi của doanh nghiệp, <strong>công ty chịu chi phí sửa chữa và chi phí vận chuyển sản phẩm từ nơi ở/nơi sử dụng đến nơi bảo hành và chiều ngược lại</strong>.</p>
           </div>
         </div>
 
         <!-- Section 5 -->
         <div class="policy-section">
-          <h2>5) Trường Hợp Không Được Bảo Hành (Lỗi Do Người Dùng/Ngoại Lực)</h2>
+          <h2>5) Trường Hợp Không Thuộc Bảo Hành (Lỗi Do Người Dùng/Ngoại Lực)</h2>
+          <p>Không bảo hành miễn phí nếu hư hỏng do:</p>
           <ul>
-            <li>Sản phẩm bị hư hỏng do va đập mạnh, rơi vỡ, cháy nổ.</li>
-            <li>Bọc da bị trầy xước, rách do vật sắc nhọn, móng thú cưng, hóa chất tẩy rửa mạnh.</li>
-            <li>Khung giường bị biến dạng do chịu tải trọng vượt quá khả năng thiết kế.</li>
-            <li>Sản phẩm bị mốc, ẩm ướt do bảo quản không đúng cách (để nơi ẩm thấp, không thông thoáng).</li>
-            <li>Sản phẩm đã qua sửa chữa, tháo lắp bởi bên thứ ba không được Hanabedding ủy quyền.</li>
-            <li>Hao mòn tự nhiên theo thời gian sử dụng (phai màu nhẹ, nhăn da do tuổi thọ vật liệu).</li>
-            <li>Thiệt hại do thiên tai, hỏa hoạn, ngập lụt, sự kiện bất khả kháng.</li>
+            <li>Va đập mạnh, làm rơi, kéo lê sai cách; trẻ em nhảy nhót, tác động lực quá tải.</li>
+            <li>Trầy xước do vật nhọn; rách da do thú cưng, dao/kéo.</li>
+            <li>Dính nước/ẩm mốc, hóa chất tẩy rửa mạnh làm bong tróc da; đặt nơi nắng gắt/nguồn nhiệt cao.</li>
+            <li>Tự ý tháo lắp, sửa chữa, thay đổi kết cấu, dùng phụ kiện không chính hãng.</li>
+            <li>Thiên tai, hỏa hoạn, ngập lụt, sự kiện bất khả kháng.</li>
           </ul>
         </div>
 
@@ -475,47 +474,64 @@
         <div class="policy-section">
           <h2>6) Chi Phí Bảo Hành & Hỗ Trợ</h2>
           
-          <h3>Trong thời gian bảo hành (miễn phí)</h3>
+          <h3>Nhóm A – Lỗi kỹ thuật từ công ty (bảo hành miễn phí)</h3>
+          <p>Công ty chịu:</p>
           <ul>
-            <li><strong>Miễn phí 100%</strong> chi phí sửa chữa, thay thế linh kiện lỗi.</li>
-            <li><strong>Miễn phí vận chuyển</strong> đi/về phục vụ bảo hành trong phạm vi <strong>≤ 50km</strong> từ kho/xưởng của công ty.</li>
+            <li>100% chi phí kiểm tra, sửa chữa, thay thế linh kiện thuộc phạm vi bảo hành.</li>
+            <li>100% chi phí vận chuyển đi/về phục vụ bảo hành.</li>
           </ul>
 
-          <h3>Ngoài phạm vi miễn phí vận chuyển</h3>
-          <div class="highlight-box">
-            <p>Khoảng cách <strong>> 50km</strong>: hỗ trợ <strong>20–30% phí ship</strong>.</p>
-          </div>
+          <h3>Nhóm B – Sơ suất từ phía người dùng (sửa chữa có phí, công ty vẫn hỗ trợ một phần)</h3>
+          <ul>
+            <li>Khách hàng chịu: <strong>100% chi phí sửa chữa/thay thế</strong>.</li>
+            <li>Vận chuyển: khách hàng chịu chính, nhưng công ty hỗ trợ:
+              <ul style="margin-top: 10px;">
+                <li><strong>Nội thành</strong>: hỗ trợ <strong>50% phí ship</strong>.</li>
+                <li><strong>Ngoại tỉnh</strong>: hỗ trợ <strong>20–30% phí ship</strong>.</li>
+              </ul>
+            </li>
+          </ul>
         </div>
 
         <!-- Section 7 -->
         <div class="policy-section">
           <h2>7) Quy Trình Tiếp Nhận Bảo Hành</h2>
           
-          <h3>Bước 1: Liên hệ bảo hành</h3>
-          <p>Khách hàng gọi <strong>Hotline Bảo Hành</strong> hoặc nhắn tin qua <strong>Zalo/Facebook</strong> cung cấp: Mã đơn hàng + hình ảnh và video lỗi + địa chỉ.</p>
-
-          <h3>Bước 2: Xác nhận và đánh giá</h3>
-          <p>Bộ phận kỹ thuật xem xét hình ảnh/video, xác định nguyên nhân và phương án xử lý (sửa tại chỗ, đổi linh kiện, hoặc thu hồi sản phẩm nếu cần).</p>
-
-          <h3>Bước 3: Thực hiện bảo hành</h3>
+          <h3>Bước 1 – Liên hệ</h3>
           <ul>
-            <li>Nếu sửa tại nhà: Kỹ thuật viên đến tận nơi trong <strong>2–5 ngày làm việc</strong> (tùy khu vực).</li>
-            <li>Nếu cần thu hồi: Hanabedding sẽ thu hồi sản phẩm về xưởng, sửa chữa và giao lại trong <strong>7–14 ngày</strong> (nếu có).</li>
+            <li>Khách hàng gọi <strong>hotline bảo hành</strong> (ở cuối trang) hoặc nhắn Zalo/Email (nếu có).</li>
+            <li>Cung cấp: Tên + SĐT + hóa đơn + hình ảnh và video lỗi + địa chỉ.</li>
           </ul>
 
-          <h3>Bước 4: Hoàn tất và xác nhận</h3>
-          <p>Sau khi bảo hành xong, khách hàng kiểm tra và ký xác nhận hoàn tất bằng văn bản/tin nhắn.</p>
+          <h3>Bước 2 – Xác nhận lỗi</h3>
+          <ul>
+            <li>Kỹ thuật đánh giá lỗi trong vòng <strong>24–48 giờ</strong> (giờ hành chính).</li>
+            <li>Thông báo rõ: thuộc <strong>Nhóm A</strong> (miễn phí) hay <strong>Nhóm B</strong> (có phí), kèm dự kiến chi phí (nếu có).</li>
+          </ul>
+
+          <h3>Bước 3 – Thực hiện bảo hành (áp dụng đối với sản phẩm do công ty lắp đặt)</h3>
+          <ul>
+            <li>Tùy tình trạng: xử lý tại nhà hoặc mang về xưởng.</li>
+            <li>Thời gian xử lý dự kiến:
+              <ul style="margin-top: 10px;">
+                <li>Lỗi nhẹ: <strong>1–5 ngày (áp dụng khách nội thành – Khách ngoại thành từ 5 – 10 ngày)</strong>.</li>
+                <li>Lỗi cần thay linh kiện/đưa về xưởng: <strong>7–15 ngày</strong>.</li>
+              </ul>
+            </li>
+            <li>Nếu không sửa được: trao đổi phương án đổi mới hoặc hoàn tiền (nếu thuộc Nhóm A).</li>
+          </ul>
+
+          <h3>Bước 4 – Hoàn tất</h3>
+          <p>Khách hàng kiểm tra, ký xác nhận hoàn tất.</p>
         </div>
 
         <!-- Section 8 -->
         <div class="policy-section">
-          <h2>8) Lưu Ý Quan Trọng</h2>
+          <h2>8) Lưu Ý Quan Trọng Để Kéo Dài Tuổi Thọ Sản Phẩm</h2>
           <ul>
-            <li>Khách hàng nên <strong>chụp ảnh/quay video</strong> sản phẩm khi nhận hàng để làm bằng chứng nếu có tranh chấp.</li>
-            <li><strong>Bảo quản hóa đơn/phiếu bảo hành</strong> cẩn thận để được hỗ trợ nhanh chóng.</li>
-            <li>Vệ sinh giường định kỳ bằng khăn mềm, tránh dùng hóa chất mạnh.</li>
             <li>Đặt giường ở nơi khô ráo, thoáng mát, tránh ánh nắng trực tiếp.</li>
-            <li>Không nhảy nhót, đứng lên giường; không kéo lê khi di chuyển.</li>
+            <li>Không dùng hóa chất tẩy rửa mạnh trên bề mặt da/simili; lau bằng khăn mềm ẩm.</li>
+            <li>Không đứng/nhảy nhót trên giường; không kéo lê khi di chuyển.</li>
           </ul>
         </div>
 
@@ -524,24 +540,23 @@
           <h2>Thông Tin Liên Hệ Bảo Hành</h2>
           <div class="contact-info">
             <div class="contact-item">
-              <span>📞 HOTLINE:</span>
+              <span>📞 HOTLINE BẢO HÀNH:</span>
               <a href="tel:19009147">1900 9147</a>
             </div>
             <div class="contact-item">
-              <span>💬 SĐT/ZALO:</span>
+              <span>💬 ZALO:</span>
               <a href="tel:0764265775">076 426 5775</a>
             </div>
             <div class="contact-item">
               <span>📧 EMAIL:</span>
               <a href="mailto:mkt.hanabedding@gmail.com">mkt.hanabedding@gmail.com</a>
             </div>
-            <div class="contact-item">
-              <span>🏢 ĐỊA CHỈ:</span>
-              <span>361 Nguyễn Kim Cương, Củ Chi, TP. Hồ Chí Minh</span>
-            </div>
           </div>
-          <p style="margin-top: 30px; font-size: 1.1rem;">
-            <strong>Hanabedding</strong> - Cam kết mang đến sản phẩm chất lượng và dịch vụ hậu mãi tốt nhất!
+          <p style="margin-top: 20px; font-size: 1rem;">
+            <strong>Thời gian làm việc:</strong> Sáng: 9h – 11h | Chiều: 14h - 16h
+          </p>
+          <p style="margin-top: 20px; font-size: 1.1rem;">
+            <strong>Hana Bedding</strong> - Cam kết mang đến sản phẩm chất lượng và dịch vụ hậu mãi tốt nhất!
           </p>
         </div>
 
