--- a/chinh-sach-giao-lap.html
+++ b/chinh-sach-giao-lap.html
@@ -417,22 +417,25 @@
           
           <h3>Khu vực nội thành TP.HCM</h3>
           <div class="highlight-box">
-            <p><span class="free-badge">MIỄN PHÍ 100%</span> giao hàng và lắp đặt cho khách hàng trong phạm vi <strong>≤ 50km</strong> tính từ kho/xưởng của công ty.</p>
+            <p><strong>Hana Bedding</strong> hỗ trợ <span class="free-badge">MIỄN PHÍ 100% phí giao hàng và lắp đặt</span> trong các trường hợp sau:</p>
+            <ul style="margin-top: 15px;">
+              <li>Khách hàng tại <strong>Thành phố Hồ Chí Minh</strong>.</li>
+              <li>Khách hàng tại <strong>các tỉnh/thành lân cận TP.HCM</strong> trong <strong>phạm vi bán kính ≤ 50km</strong> tính từ kho/xưởng của công ty.</li>
+            </ul>
           </div>
 
-          <h3>Dịch vụ bao gồm</h3>
+          <h3>Bao gồm miễn phí:</h3>
           <ul>
-            <li>Vận chuyển sản phẩm đến tận nhà khách hàng.</li>
-            <li>Lắp đặt giường hoàn chỉnh, chắc chắn.</li>
-            <li>Kiểm tra chất lượng và hướng dẫn sử dụng.</li>
-            <li>Dọn dẹp vệ sinh sau khi lắp đặt.</li>
-            <li>Bàn giao sản phẩm sau lắp đặt.</li>
+            <li>Vận chuyển sản phẩm đến tận nơi.</li>
+            <li>Lắp đặt hoàn thiện tại vị trí khách hàng yêu cầu.</li>
+            <li>Kiểm tra kỹ thuật và bàn giao sản phẩm sau lắp đặt.</li>
           </ul>
 
-          <h3>Lưu ý</h3>
-          <div class="highlight-box">
-            <p>Nếu địa chỉ giao hàng có <strong>điều kiện đặc biệt</strong> (cần cẩu, thang máy hàng, đường hẹp...), vui lòng thông báo trước để Hanabedding chuẩn bị phương án lắp đặt đúng theo tư vấn ban đầu.</p>
-          </div>
+          <h3>Không phát sinh chi phí:</h3>
+          <ul>
+            <li>Địa điểm lắp đặt thuận tiện (tầng trệt, có thang máy hoặc lối vận chuyển phù hợp).</li>
+            <li>Điều kiện lắp đặt đúng theo tư vấn ban đầu.</li>
+          </ul>
         </div>
 
         <div class="policy-section">
@@ -446,42 +449,44 @@
         </div>
 
         <div class="policy-section">
-          <h2>4) Quy Trình Giao Hàng & Lắp Đặt</h2>
-          
-          <h3>Bước 1: Xác nhận đơn hàng</h3>
-          <p>Sau khi khách hàng đặt hàng và thanh toán (hoặc đặt cọc), Hanabedding xác nhận thông tin: Địa chỉ giao hàng, số điện thoại liên hệ, thời gian mong muốn nhận hàng.</p>
-
-          <h3>Bước 2: Sản xuất & chuẩn bị</h3>
-          <p>Thời gian sản xuất: <strong>7–14 ngày</strong> (tùy mẫu và số lượng đơn hàng). Hanabedding sẽ thông báo tiến độ và gửi hình ảnh/video sản phẩm trước khi giao (nếu khách yêu cầu).</p>
-
-          <h3>Bước 3: Hẹn lịch giao hàng</h3>
-          <p>Nhân viên liên hệ khách hàng để <strong>hẹn lịch giao hàng cụ thể</strong> (buổi sáng/chiều, ngày trong tuần). Khách hàng cần <strong>có mặt tại địa chỉ</strong> để nhận hàng và ký xác nhận. Nếu thay đổi lịch, vui lòng báo trước <strong>ít nhất 24 giờ</strong> để Hanabedding sắp xếp lại lịch giao hàng sau khi đã xác nhận lịch.</p>
-
-          <h3>Bước 4: Giao hàng & lắp đặt</h3>
-          <p>Đội ngũ giao hàng và kỹ thuật viên đến tận nơi, mang theo đầy đủ dụng cụ lắp đặt. Thời gian lắp đặt: <strong>30–60 phút</strong> (tùy loại giường). Sau khi lắp xong, kỹ thuật viên kiểm tra độ chắc chắn, hướng dẫn sử dụng và bảo quản. Khách hàng kiểm tra sản phẩm, ký xác nhận bàn giao và ghi chú (nếu có). Đội ngũ dọn dẹp vệ sinh, mang theo phế liệu đóng gói (nếu khách không giữ lại).</p>
+          <h2>4) Quy Định Về Lắp Đặt</h2>
+          <ul>
+            <li>Công ty <strong>ưu tiên lắp đặt tận nơi</strong> cho khách hàng.</li>
+            <li>Trường hợp khu vực quá xa hoặc điều kiện không cho phép:
+              <ul style="margin-top: 10px;">
+                <li>Công ty sẽ <strong>hỗ trợ gửi hàng</strong> qua đơn vị vận chuyển.</li>
+                <li>Hướng dẫn <strong>lắp đặt chi tiết</strong> (video/hình ảnh).</li>
+              </ul>
+            </li>
+          </ul>
         </div>
 
         <div class="policy-section">
           <h2>5) Các Chi Phí Có Thể Phát Sinh (Nếu Có)</h2>
+          <p>Một số trường hợp có thể phát sinh thêm chi phí (sẽ báo trước):</p>
           <ul>
-            <li><strong>Phí vận chuyển xa:</strong> Nếu địa chỉ giao hàng > 50km, khách hàng thanh toán thêm phí vận chuyển theo thỏa thuận.</li>
-            <li><strong>Phí cẩu hàng/thang máy hàng:</strong> Nếu cần thuê cẩu hoặc thang máy hàng đặc biệt, khách hàng thanh toán chi phí thực tế.</li>
-            <li><strong>Phí lắp đặt tỉnh xa:</strong> Nếu khách ở tỉnh yêu cầu Hanabedding cử thợ đến lắp, chi phí đi lại sẽ được báo giá trước.</li>
-            <li><strong>Phí hủy/đổi lịch giao hàng:</strong> Nếu khách hủy hoặc đổi lịch nhiều lần sau khi đã xác nhận, có thể phát sinh phí điều phối (tùy trường hợp). Hanabedding sẽ thông báo rõ chi phí (nếu có) trước khi thực hiện. Khách hàng đồng ý mới tiến hành, tránh phát sinh tranh chấp sau này. Mọi chi phí phát sinh sẽ được thông báo và xác nhận bằng văn bản/tin nhắn trước.</li>
+            <li>Khu vực <strong>khó tiếp cận</strong>: hẻm nhỏ, lầu cao không thang máy.</li>
+            <li>Lắp đặt ngoài giờ hành chính theo yêu cầu riêng.</li>
+            <li>Yêu cầu tháo dỡ, di dời sản phẩm cũ.</li>
+            <li>Thay đổi địa chỉ giao hàng sau khi đã xác nhận lịch.</li>
           </ul>
+          <div class="highlight-box">
+            <p>Mọi chi phí phát sinh (nếu có) đều được <strong>thông báo rõ ràng và thống nhất trước</strong>.</p>
+          </div>
         </div>
 
         <div class="policy-section">
           <h2>6) Kiểm Tra & Bàn Giao Sản Phẩm</h2>
           <p>Khách hàng vui lòng <strong>kiểm tra kỹ sản phẩm</strong> ngay khi nhận hàng:</p>
           <ul>
-            <li>Kiểm tra ngoại quan: màu sắc, kích thước, chất liệu da.</li>
-            <li>Kiểm tra kết cấu: khung giường, chân giường, độ chắc chắn.</li>
-            <li>Nếu phát hiện lỗi hoặc sai sót, vui lòng <strong>thông báo ngay</strong> cho kỹ thuật viên hoặc nhân viên giao hàng để xử lý tại chỗ hoặc báo cáo với đơn vị vận chuyển.</li>
+            <li>Đúng mẫu mã, kích thước, màu sắc.</li>
+            <li>Không trầy xước, móp méo do vận chuyển.</li>
+            <li>Quay video đồng kiểm với đơn vị vận chuyển.</li>
           </ul>
 
+          <p style="margin-top: 20px;">Sau khi lắp đặt hoàn tất và bàn giao:</p>
           <div class="highlight-box">
-            <p>Sau khi lắp đặt hoàn tất và bàn giao: Hanabedding <strong>không chịu trách nhiệm</strong> về các vấn đề phát sinh do khách hàng tự ý tháo lắp, di chuyển hoặc sử dụng không đúng cách (trừ trường hợp bảo hành).</p>
+            <p>Công ty <strong>không chịu trách nhiệm</strong> đối với các hư hỏng phát sinh do quá trình sử dụng sau đó (trừ trường hợp bảo hành).</p>
           </div>
         </div>
 
@@ -493,20 +498,16 @@
               <a href="tel:19009147">1900 9147</a>
             </div>
             <div class="contact-item">
-              <span>💬 SĐT/ZALO:</span>
+              <span>💬 ZALO:</span>
               <a href="tel:0764265775">076 426 5775</a>
             </div>
             <div class="contact-item">
               <span>📧 EMAIL:</span>
               <a href="mailto:mkt.hanabedding@gmail.com">mkt.hanabedding@gmail.com</a>
             </div>
-            <div class="contact-item">
-              <span>🏢 ĐỊA CHỈ:</span>
-              <span>361 Nguyễn Kim Cương, Củ Chi, TP. Hồ Chí Minh</span>
-            </div>
           </div>
           <p style="margin-top: 30px; font-size: 1.1rem;">
-            <strong>Hanabedding</strong> - Giao hàng nhanh chóng, lắp đặt chuyên nghiệp, tận tâm phục vụ!
+            <strong>Hana Bedding</strong> - Giao hàng nhanh chóng, lắp đặt chuyên nghiệp, tận tâm phục vụ!
           </p>
         </div>
 
